# shuffle

./: LICENSE  README.md  shuffle.cabal
src/: Main.hs  ShufflePluck.hs
